fixed search bar overflow bug

--- a/src/app/search/search-bar/search-bar.component.css
+++ b/src/app/search/search-bar/search-bar.component.css
@@ -22,6 +22,8 @@ a.search-result:hover {
   margin: 0;
   /*width: 300px;*/
   font-size: 14px;
+  line-height: normal;
+  white-space: normal;
 }
 
 .search input {}
@@ -40,13 +42,13 @@ a.search-result:hover {
   right: 0;
   z-index: 999;
   padding: 0;
-  margin: 0 0 0 17px;
+  margin: 0 0 0 30px;
   border-width: 1px;
   border-style: solid;
   border-color: #BDBDBD #BDBDBD #BDBDBD;
   border-radius: 3px;
   background-color: #757575;
-  max-width: 90%;
+  max-width: 80%;
   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   -ms-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
@@ -108,7 +110,6 @@ a.search-result:hover {
 }
 
 .search .search-results a span {
-  /*margin-top: 2px;*/
   font-weight: 200;
   max-width: 80%;
 }
